--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <div class="resume__content">
                   <div class="resume__date-title">
                     <h3 class="resume__title">Stall Manager</h3>
-                    <span class="resume__date">2010 - 2012</span>
+                    <span class="resume__date">2021</span>
                   </div>
 
                   <p class="resume__description">
