--- a/project-1.html
+++ b/project-1.html
@@ -23,11 +23,11 @@
           <div class="header__logo-img-cont">
             <img
               src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              alt="Awaiz Ahmed Logo Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Awaiz Ahmed</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -87,9 +87,8 @@
         <h1 class="heading-primary">Project 1</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            in numquam incidunt earum quaerat cum fuga, atque similique natus
-            nobis sit.
+            A sleek and responsive portfolio website using HTML, CSS, and JavaScript. 
+            It features smooth animations, a dynamic gallery, and a user-friendly interface optimized for all devices.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -109,24 +108,17 @@
           </div>
           <div class="project-details__content-main">
             <div class="project-details__desc">
-              <h3 class="project-details__content-title">Project Overview</h3>
-              <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Neque alias tenetur minus quaerat
-                aliquid, aut provident blanditiis, deleniti aspernatur ipsam
-                eaque veniam voluptatem corporis vitae mollitia laborum corrupti
-                ullam rem?
-              </p>
-              <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem?
-              </p>
+                <h3 class="project-details__content-title">Project Overview</h3>
+                <p class="project-details__desc-para">
+                    This project is a modern, fully responsive portfolio website built to showcase creative work. It features a sleek design with smooth animations, interactive elements, and an intuitive user interface, ensuring an engaging experience. 
+                    Developed with HTML, CSS, and JavaScript, it offers optimized performance and adaptability for various screen sizes, making it accessible across all devices. 
+                </p>
+                <p class="project-details__desc-para">
+                    The website includes a dynamic project gallery, contact form integration, and seamless navigation for a streamlined user experience. Its clean and structured code ensures maintainability, while the design enhances readability and visual appeal.
+                </p>
             </div>
+        </div>
+        
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
@@ -209,19 +201,18 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Awaiz Ahmed</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              A sleek and responsive portfolio website using HTML, CSS, and JavaScript.
+             It features smooth animations, a dynamic gallery, and a user-friendly interface optimized for all devices.
             </p>
           </div>
         </div>
 
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
+          &copy; Copyright 2025. Made by
+          <a rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/awaiz-ahmed/"
+            >Awaiz Ahmed</a>
         </div>
       </div>
     </footer>
