--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/jpeg/project-mockup-example.jpg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -228,9 +228,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 1</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                A modern and responsive landing page for a fictional clothing store, designed using HTML and CSS. It features a clean layout, product listings, promotional banners, and a newsletter subscription form for user engagement.
               </p>
               <a
                 href="./project-1.html"
