--- a/project-1.html
+++ b/project-1.html
@@ -87,12 +87,11 @@
         <h1 class="heading-primary">Project 1</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            A sleek and responsive portfolio website using HTML, CSS, and JavaScript. 
-            It features smooth animations, a dynamic gallery, and a user-friendly interface optimized for all devices.
+            A modern and responsive landing page for a fictional clothing store, designed using HTML and CSS. It features a clean layout, product listings, promotional banners, and a newsletter subscription form for user engagement.
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://awaiz17.github.io/Project-1/" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -101,7 +100,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-mockup-example.jpeg"
+              src="./assets/jpeg/project-mockup-example1.jpg"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -110,11 +109,7 @@
             <div class="project-details__desc">
                 <h3 class="project-details__content-title">Project Overview</h3>
                 <p class="project-details__desc-para">
-                    This project is a modern, fully responsive portfolio website built to showcase creative work. It features a sleek design with smooth animations, interactive elements, and an intuitive user interface, ensuring an engaging experience. 
-                    Developed with HTML, CSS, and JavaScript, it offers optimized performance and adaptability for various screen sizes, making it accessible across all devices. 
-                </p>
-                <p class="project-details__desc-para">
-                    The website includes a dynamic project gallery, contact form integration, and seamless navigation for a streamlined user experience. Its clean and structured code ensures maintainability, while the design enhances readability and visual appeal.
+                  This landing page was built to enhance web development skills, focusing on responsive design and user-friendly navigation. The site includes a structured layout with clear section divisions, optimized spacing, and visually appealing product displays. It also integrates a navigation bar, promotional content, and service highlights like free shipping and fast delivery.
                 </p>
             </div>
         </div>
@@ -125,13 +120,8 @@
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
                 <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">SASS</div>
                 <div class="skills__skill">GIT</div>
                 <div class="skills__skill">Shopify</div>
-                <div class="skills__skill">Wordpress</div>
-                <div class="skills__skill">Google ADS</div>
-                <div class="skills__skill">Facebook Ads</div>
                 <div class="skills__skill">Android</div>
                 <div class="skills__skill">IOS</div>
               </div>
@@ -139,18 +129,18 @@
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="#"
+                href="https://awaiz17.github.io/Project-1/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="#"
+                href="https://github.com/Awaiz17/Project-1"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
               >
-            </div>
+            </div>            
           </div>
         </div>
       </div>
