--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dopefolio</title>
-    <meta name="description" content="Portfolio Template for Developer" />
+    <title>Awaiz Portfolio</title>
+    <meta name="description" content="Awaiz Portfolio for Website Development" />
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="./assets/png/john-doe.png" href="./assets/png/john-doe.png">
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +25,7 @@
           <div class="header__logo-img-cont">
             <img
               src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              alt="Awaiz Ahmed Logo Image"
               class="header__logo-img"
             />
           </div>
@@ -250,9 +252,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 2</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                COMING SOON!
               </p>
               <a
                 href="./project-2.html"
@@ -274,9 +274,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 3</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                COMING SOON!
               </p>
               <a
                 href="./project-3.html"
@@ -298,7 +296,7 @@
           </span>
         </h2>
         <div class="contact__form-container">
-          <form action="#" class="contact__form">
+          <form action="https://formspree.io/f/xrbpabpq" method="POST" class="contact__form">
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
@@ -315,7 +313,7 @@
               <input
                 required
                 placeholder="Enter Your Email"
-                type="text"
+                type="email"
                 class="contact__form-input"
                 name="email"
                 id="email"
@@ -333,10 +331,16 @@
                 id="message"
               ></textarea>
             </div>
+            
+            <!-- Hidden fields for Formspree configuration -->
+            <input type="hidden" name="_next" value="https://awaiz17.github.io/Portfolio/">
+            <input type="hidden" name="_subject" value="New message from portfolio contact form">
+            
             <button type="submit" class="btn btn--theme contact__btn">
               Submit
             </button>
           </form>
+        </div>
         </div>
       </div>
     </section>
@@ -395,5 +399,6 @@
     </footer>
 
     <script src="./index.js"></script>
+    <script src="//code.tidio.co/uq9w83czhcymspag875wq4uvobyaxo8r.js" async></script>
   </body>
 </html>
