--- a/project-2.html
+++ b/project-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Project 2</title>
+    <title>Project 2</title>
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -87,8 +87,7 @@
         <h1 class="heading-primary">Project 2</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            A sleek and responsive portfolio website using HTML, CSS, and JavaScript. 
-            It features smooth animations, a dynamic gallery, and a user-friendly interface optimized for all devices.
+            COMING SOON!
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -110,29 +109,16 @@
             <div class="project-details__desc">
                 <h3 class="project-details__content-title">Project Overview</h3>
                 <p class="project-details__desc-para">
-                    This project is a modern, fully responsive portfolio website built to showcase creative work. It features a sleek design with smooth animations, interactive elements, and an intuitive user interface, ensuring an engaging experience. 
-                    Developed with HTML, CSS, and JavaScript, it offers optimized performance and adaptability for various screen sizes, making it accessible across all devices. 
+                  COMING SOON
                 </p>
                 <p class="project-details__desc-para">
-                    The website includes a dynamic project gallery, contact form integration, and seamless navigation for a streamlined user experience. Its clean and structured code ensures maintainability, while the design enhances readability and visual appeal.
                 </p>
             </div>
         </div>              
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
-                <div class="skills__skill">HTML</div>
-                <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">SASS</div>
-                <div class="skills__skill">GIT</div>
-                <div class="skills__skill">Shopify</div>
-                <div class="skills__skill">Wordpress</div>
-                <div class="skills__skill">Google ADS</div>
-                <div class="skills__skill">Facebook Ads</div>
-                <div class="skills__skill">Android</div>
-                <div class="skills__skill">IOS</div>
+
               </div>
             </div>
             <div class="project-details__links">
@@ -162,35 +148,28 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/awaiz-ahmed">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/Awaiz17">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/twitter-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.youtube.com/@AwaizWorks">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/yt-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/4waaiz">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
@@ -202,8 +181,7 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Awaiz Ahmed</h4>
             <p class="main-footer__short-desc">
-              A sleek and responsive portfolio website using HTML, CSS, and JavaScript.
-             It features smooth animations, a dynamic gallery, and a user-friendly interface optimized for all devices.
+              Crafting modern, high-performance websites that stand out.
             </p>
           </div>
         </div>
