--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/jpeg/project-mockup-example2.jpg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -251,7 +251,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 2</h3>
               <p class="projects__row-content-desc">
-                COMING SOON!
+                A clean and well-designed portfolio website template for developers, built using HTML and CSS. It offers a sleek and professional layout, making it perfect for showcasing projects, skills, and experiences. Ideal for use as a template or inspiration for building a personal brand online.
               </p>
               <a
                 href="./project-2.html"
