--- a/project-2.html
+++ b/project-2.html
@@ -87,11 +87,11 @@
         <h1 class="heading-primary">Project 2</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            COMING SOON!
+            A clean and well-designed portfolio website template for developers, built using HTML and CSS. It offers a sleek and professional layout, making it perfect for showcasing projects, skills, and experiences. Ideal for use as a template or inspiration for building a personal brand online.
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://awaiz17.github.io/Project-2/" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -100,7 +100,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-mockup-example.jpeg"
+              src="./assets/jpeg/project-mockup-example3.jpg"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -109,7 +109,9 @@
             <div class="project-details__desc">
                 <h3 class="project-details__content-title">Project Overview</h3>
                 <p class="project-details__desc-para">
-                  COMING SOON
+                  This portfolio website is a modern and elegant solution for developers looking to create a strong online presence. Designed with simplicity and aesthetics in mind, it features a clean and structured layout built purely with HTML and CSS. The website is fully responsive, ensuring an optimal viewing experience across devices.
+
+With a focus on usability and visual appeal, the template includes well-organized sections for introducing yourself, highlighting projects, showcasing skills, and providing contact details. Its minimal yet professional design makes it an excellent starting point for developers who want a polished portfolio without the hassle of starting from scratch. Whether you're a beginner looking for inspiration or a seasoned developer in need of a solid foundation, this template serves as a perfect tool to craft a compelling personal brand.
                 </p>
                 <p class="project-details__desc-para">
                 </p>
@@ -118,19 +120,20 @@
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
-
+                <div class="skills__skill">HTML</div>
+                <div class="skills__skill">CSS</div>
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="#"
+                href="https://awaiz17.github.io/Project-2/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="#"
+                href="https://github.com/Awaiz17/Project-2"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
