--- a/project-1.html
+++ b/project-1.html
@@ -91,7 +91,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://awaiz17.github.io/Project-1/" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://4waiz.github.io/Project-1/" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -129,13 +129,13 @@
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="https://awaiz17.github.io/Project-1/"
+                href="https://4waiz.github.io/Project-1/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="https://github.com/Awaiz17/Project-1"
+                href="https://github.com/4waiz/Project-1"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
@@ -160,7 +160,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="https://github.com/Awaiz17">
+              <a target="_blank" rel="noreferrer" href="https://github.com/4waiz">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
