--- a/project-2.html
+++ b/project-2.html
@@ -91,7 +91,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://awaiz17.github.io/Project-2/" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://4waiz.github.io/Project-2/" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -127,13 +127,13 @@ With a focus on usability and visual appeal, the template includes well-organize
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="https://awaiz17.github.io/Project-2/"
+                href="https://4waiz.github.io/Project-2/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="https://github.com/Awaiz17/Project-2"
+                href="https://github.com/4waiz/Project-2"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
@@ -158,7 +158,7 @@ With a focus on usability and visual appeal, the template includes well-organize
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="https://github.com/Awaiz17">
+              <a target="_blank" rel="noreferrer" href="https://github.com/4waiz">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
