--- a/project-3.html
+++ b/project-3.html
@@ -156,7 +156,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="https://github.com/Awaiz17">
+              <a target="_blank" rel="noreferrer" href="https://github.com/4waiz">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
