--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="./assets/png/john-doe.png">
     <meta property="og:title" content="Awaiz Ahmed - Portfolio">
     <meta property="og:description" content="Crafting modern, high-performance websites that stand out.">
-    <meta property="og:image" content="https://4waiz.github.io/Portfolio/assets/png/john-doe.png">
+    <meta property="og:image" content="https://4waiz.github.io/Portfolio/assets/png/awaiz.jpeg">
     <meta property="og:url" content="https://4waiz.github.io/Portfolio/">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -116,9 +116,9 @@
         <!-- GitHub -->
         <div class="home-hero__social">
           <a href="https://github.com/4waiz" class="home-hero__social-icon-link" target="_blank" rel="noopener noreferrer">
-            <img7
-              src="./assets/png/github-ico.png"
-              alt="GitHub Icon"
+            <img
+              src="./assets\png\github-ico.png"
+              alt="Github Icon"
               class="home-hero__social-icon"
             />
           </a>
@@ -334,7 +334,6 @@
                 id="message"
               ></textarea>
             </div>
-            https://github.com/
             <!-- Hidden fields for Formspree configuration -->
             <input type="hidden" name="_next" value="https://4waiz.github.io/Portfolio/">
             <input type="hidden" name="_subject" value="New message from portfolio contact form">
