--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="./assets/png/john-doe.png">
     <meta property="og:title" content="Awaiz Ahmed - Portfolio">
     <meta property="og:description" content="Crafting modern, high-performance websites that stand out.">
-    <meta property="og:image" content="https://4waiz.github.io/Portfolio/assets/png/awaiz.jpeg">
+    <meta property="og:image" content="https://4waiz.github.io/Portfolio/assets/png/john-doe.png">
     <meta property="og:url" content="https://4waiz.github.io/Portfolio/">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
