--- a/index.html
+++ b/index.html
@@ -268,16 +268,17 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/jpeg/project-mockup-example4.jpg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
+              
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 3</h3>
               <p class="projects__row-content-desc">
-                COMING SOON!
+                A modern IT support website built with HTML, CSS, and JavaScript, focusing on user experience through a responsive layout, intuitive navigation, smooth animations, and interactive contact form.
               </p>
               <a
                 href="./project-3.html"
