--- a/project-3.html
+++ b/project-3.html
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">Project 3</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            COMING SOON!
+            A modern IT support website built with HTML, CSS, and JavaScript, focusing on user experience through a responsive layout, intuitive navigation, smooth animations, and interactive contact form.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -100,7 +100,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-mockup-example.jpeg"
+              src="./assets/jpeg/project-mockup-example5.jpg"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -109,29 +109,42 @@
             <div class="project-details__desc">
                 <h3 class="project-details__content-title">Project Overview</h3>
                 <p class="project-details__desc-para">
-                    COMING SOON!
+                  This website was created to provide an exceptional user experience for IT support customers. Key features include:
+                  Service Listings – Clear and concise descriptions of IT services.
+                  Client Testimonials – Authentic customer reviews to build trust.
+                  Responsive Design – Seamless experience on desktops, tablets, and mobile devices.
+                  Smooth Animations – Enhancing the overall user interface with transitions.
+                  Contact Form – Simple, user-friendly form for easy communication.
+                  
+                  The project highlights my ability to optimize user experience while delivering a professional, visually appealing website tailored for business needs.
                   </p>
                 <p class="project-details__desc-para">
                 </p>
             </div>
         </div>
         
-            <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
-              <div class="skills">
-
-              </div>
-            </div>
+        <div class="project-details__tools-used">
+          <h3 class="project-details__content-title">Tools Used</h3>
+          <div class="skills">
+            <div class="skills__skill">HTML</div>
+            <div class="skills__skill">CSS</div>
+            <div class="skills__skill">JavaScript</div>
+            <div class="skills__skill">GIT</div>
+            <div class="skills__skill">UI/UX</div>
+            <div class="skills__skill">Android</div>
+            <div class="skills__skill">IOS</div>
+          </div>
+        </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="#"
+                href="https://4waiz.github.io/Project-3/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="#"
+                href="https://github.com/4waiz/Project-3"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
